<resources>
    <string name="app_name">Excent</string>
    <string name="launch_action_not_supported">Action not currently supported</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="delete_ongoing_event">Lanzar evento en curso</string>
    <string name="delete_pre_sell">Lanzar preventa</string>
    <string name="delete_good_deal">Lanzar ofertas</string>
    <string name="delete_re_sell">Lanzar reventa</string>
    <string name="delete_food">Lanzar alimentos y bebidas</string>
    <string name="delete_settings">Lanzar configuración de cuenta</string>
    <string name="delete_tickets">Lanzar compra de ticket</string>
    <string name="delete_news">Lanzar noticias</string>
    <string name="delete_comments">Lanzar comentarios</string>
    <string name="delete_location">Lanzar localizacion</string>
    <string name="delete_register_seat">Lanzar registro de asiento</string>

    <!-- GENERAL -->
    <string name="send">Enviar</string>

    <!-- CHANGE PASSWORD -->
    <string name="current_password">Constraseña actual</string>
    <string name="change_password_successful">La contraseña fue cambiada exitosamente.</string>

    <!-- FORGOT PASSWORD -->
    <string name="current_email">Correo actual</string>
    <string name="verify_email">Ve a tu bandeja de entrada para cambiar tu contraseña.</string>
    <string name="forgot_password_instructions">Agrega tu correo y te enviaremos un link para restablecer tu contraseña.</string>

    <!-- LOGIN -->
    <string name="connection_error">Error al realizar la conexión</string>
    <string name="generic_request_error">Ah sucedido un error inesperado</string>
    <string name="user_invalid">Usuario y/o contraseña son incorrectos</string>
    <string name="forbidden">Sin autorización</string>
    <string name="complete_fields_login">Agregue su usuario y/o contraseña</string>

    <!-- FORM HELPER -->
    <string name="field_is_required">El campo de %s es requerido</string>
    <string name="field_requires_fewer_chars">El campo %s es demasiado corto</string>
    <string name="field_error_invalid_email">El email no tiene el formato correcto</string>
    <string name="field_error_password_incorrect_format">La contraseña debe de contener una mayuscula, un número y minimo 8 caractéres </string>
    <string name="field_error_non_matching_password">Las contraseñas no coinciden </string>

    <!-- MENU -->
    <string name="menu_search">Buscar</string>
    <string name="menu_ongoing_event">Evento en curso</string>
    <string name="menu_pre_sell">Preventa</string>
    <string name="menu_good_deal">Ofertas</string>
    <string name="menu_re_sell">Reventa</string>
    <string name="menu_food">Bebidas y alimentos</string>
    <string name="menu_settings">Configuración de la cuenta</string>

    <!-- HOME -->
    <string name="home_next_events">Próximos eventos</string>
    <string name="home_sports">Deportes</string>
    <string name="home_concert">Conciertos</string>
    <string name="home_fests">Festivales</string>
    <string name="home_others">Otros</string>
    <string name="home_no_events">Sin eventos disponibles</string>

    <!-- SETTINGS -->
    <string name="settings_title">Configuración de cuenta</string>
    <string name="settings_method_pay">Métodos de pago</string>
    <string name="settings_user_information">Información de usuario</string>
    <string name="settings_social_network_title">Conectar con redes sociales</string>
    <string name="settings_social_network_facebook">Facebook</string>
    <string name="settings_social_network_instagram">Instragram</string>
    <string name="settings_log_out">Salir</string>

    <!-- SETTINGS PAYMENT METHOD-->
    <string name="settings_no_payment_method">No hay métodos de pago activos.</string>
    <string name="settings_card">Tarjeta</string>
    <string name="settings_paypal">PayPal</string>
    <string name="settings_add_payment_method">Agregar metodos de pago</string>
    <string name="settings_card_number">Número de tarjeta</string>
    <string name="settings_card_date">01/2028</string>
    <string name="settings_card_cvc">CVC</string>
    <string name="settings_card_name">Nombre del propietario</string>
    <string name="settings_change_password">Cambiar contraseña</string>
    <string name="settings_save">Guardar</string>
    <string name="settings_question"><u>¿Cómo guardamos tus datos?</u></string>

    <!-- Event core -->
    <string name="event_buy_ticket">Comprar boleto</string>
    <string name="event_food">Alimentos y bebidas</string>
    <string name="event_register">Registrarme en el evento</string>
    <string name="event_location">Ubicación</string>
    <string name="event_news">Noticias del evento</string>
    <string name="event_comments">Comentarios o sugerencias</string>

    <!-- Event add seat -->
    <string name="event_add_seat_detail">Introduce la cantidad y números de tus asientos para disfrutar de nuestros servicios.</string>
    <string name="event_amount_seats">Cantidad de asientos</string>
    <string name="event_continue">Continuar</string>
    <string name="event_seats_success">Asientos agregados</string>

    <!-- Map -->
    <string name="map_failed_invalid_location">La ubicación es inválida</string>
    <string name="map_failed_no_map_app">Error al lanzar el mapa, sin aplicaciones disponibles</string>

</resources>
