<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/menu_search" />

    <group android:id="@+id/group_event">
        <item
            android:id="@+id/ongoing_event"
            android:title="@string/menu_ongoing_event" />
        <item
            android:id="@+id/pre_sell"
            android:title="@string/menu_pre_sell" />
        <item
            android:id="@+id/good_deal"
            android:title="@string/menu_good_deal" />
        <item
            android:id="@+id/re_sell"
            android:title="@string/menu_re_sell" />
        <item
            android:id="@+id/food"
            android:title="@string/menu_food" />
    </group>

    <group android:id="@+id/group_settings">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>