<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.alien.excent.ui.settings.home.SettingsHomeFragment">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/settings_title"
        android:textColor="@color/gray_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/im_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/txt_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings" />

    <com.example.alien.excent.ui.settings.SettingsSections
        android:id="@+id/ss_pay_method"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/settings_method_pay"
        app:image="@drawable/ic_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_settings" />

    <com.example.alien.excent.ui.settings.SettingsSections
        android:id="@+id/ss_user_information"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:title="@string/settings_user_information"
        app:image="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ss_pay_method" />

    <View
        android:id="@+id/view_bottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ss_user_information" />

    <TextView
        android:id="@+id/txt_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/settings_social_network_title"
        android:textColor="@color/gray_60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_bottom" />

    <ImageView
        android:id="@+id/im_facebook"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_subtitle"
        app:srcCompat="@android:drawable/btn_star" />

    <ImageView
        android:id="@+id/im_instagram"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_facebook"
        app:srcCompat="@android:drawable/btn_star" />

    <TextView
        android:id="@+id/txt_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/settings_social_network_facebook"
        android:textColor="@color/gray_60"
        app:layout_constraintStart_toEndOf="@+id/im_facebook"
        app:layout_constraintTop_toBottomOf="@+id/txt_subtitle" />

    <TextView
        android:id="@+id/txt_instagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/settings_social_network_instagram"
        app:layout_constraintStart_toEndOf="@+id/im_instagram"
        app:layout_constraintTop_toBottomOf="@+id/txt_facebook" />

    <TextView
        android:id="@+id/txt_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/settings_log_out"
        android:textColor="@color/gray_60"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_instagram"
        app:layout_constraintVertical_bias="0.88" />

    <ImageView
        android:id="@+id/im_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:rotation="180"
        android:src="@drawable/ic_arrow_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
</ScrollView>

