<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgot_password_root_view"
    android:background="@color/gray_10"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/forgot_password_card_view_height"
        android:layout_marginStart="@dimen/change_password_card_view_margin"
        android:layout_marginTop="@dimen/change_password_card_view_margin"
        android:layout_marginEnd="@dimen/change_password_card_view_margin"
        android:layout_marginBottom="@dimen/change_password_card_view_margin"
        app:cardCornerRadius="@dimen/change_password_card_view_corner_radius"
        app:cardElevation="@dimen/change_password_card_view_elevation"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_instruction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/forgot_password_instruction_margin_horizontal"
                android:layout_marginTop="@dimen/forgot_password_instruction_margin_top"
                android:layout_marginEnd="@dimen/forgot_password_instruction_margin_horizontal"
                android:text="@string/forgot_password_instructions"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/im_logo" />

            <ImageView
                android:id="@+id/im_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/change_password_image_close_margin"
                android:layout_marginEnd="@dimen/change_password_image_close_margin"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:tint="@color/blue_70"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/im_logo"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_marginStart="@dimen/change_password_logo_margin"
                android:layout_marginTop="@dimen/change_password_logo_margin"
                android:layout_marginEnd="@dimen/change_password_logo_margin"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/im_close" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/change_password_edt_password_margin_width"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/change_password_edt_password_margin_width"
                android:ems="10"
                android:hint="@string/current_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="@dimen/change_password_edt_password_padding_width"
                android:paddingEnd="@dimen/change_password_edt_password_padding_width"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_instruction" />

            <ImageView
                android:id="@+id/im_password"
                android:layout_width="@dimen/change_password_image_password_width"
                android:layout_height="@dimen/change_password_image_password_height"
                android:layout_marginStart="@dimen/change_password_image_password_margin_width"
                android:layout_marginEnd="@dimen/change_password_image_password_margin_width"
                android:src="@drawable/ic_email"
                app:layout_constraintBottom_toBottomOf="@+id/edt_email"
                app:layout_constraintStart_toStartOf="@+id/edt_email"
                app:layout_constraintTop_toTopOf="@+id/edt_email" />

            <Button
                android:id="@+id/btn_send_email"
                android:layout_width="0dp"
                android:layout_height="@dimen/forgot_password_button_height"
                android:layout_marginStart="@dimen/forgot_password_button_margin_horizontal"
                android:layout_marginEnd="@dimen/forgot_password_button_margin_horizontal"
                android:layout_marginBottom="@dimen/forgot_password_button_margin_bottom"
                android:background="@drawable/btn_login"
                android:text="@string/send"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
